small toutch on small bugs

--- a/src/assets/scss/components/_components-pagesection.scss
+++ b/src/assets/scss/components/_components-pagesection.scss
@@ -44,6 +44,6 @@
 
   @include breakpoint(medium) {
     //permets de laisser l'epace le menu nav
-    padding-top: 300px;
+    padding-top: 275px;
   }
 }
