--- a/src/assets/scss/components/_components.herobanner.scss
+++ b/src/assets/scss/components/_components.herobanner.scss
@@ -38,7 +38,7 @@
 
 @include breakpoint(medium) {
   .c-herobanner__subheadline--nobtns{
-    margin-bottom: 70%;
+    margin-bottom: 50%;
   }
 }
 
